# microservice-encoder-rust

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20230824193240_create_videos.down.sql  20230824193240_create_videos.up.sql  20230824193311_create_jobs.up.sql
src/: lib.rs
src/application/repositories/: job_repository.rs  mod.rs  video_repository.rs
src/application/services/: mod.rs  video_service.rs
src/domain/: job.rs  job_test.rs  mod.rs  video.rs  video_test.rs
src/framework/database/: db.rs
tests/application/repositories/: job_repository_test.rs  mod.rs  video_repository_test.rs
tests/application/services/: mod.rs  video_service_test.rs
tests/domain/: job_test.rs  mod.rs  video_test.rs
