[package]
name = "rust-video-encoder-service"
version = "0.1.0"
edition = "2021"
author = ["Carlos Rodrigues"]
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "video_encoder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { verion ="1.3.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "sqlite"] }
dotenvy = "0.15"
